<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/MainLayot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorContentBackground"
        tools:context=".DataLoadingActivity">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/TopPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTopPanelBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ExitBtnImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ExitBtnImg_onClick"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/button_exit" />

            <TextView
                android:id="@+id/TitleTxtView"
                style="@style/TopPanelTxtTitle"
                android:text="@string/name_buisness_process"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/HeadTxtView"
                style="@style/TopPanelTxtHead"
                android:text="@string/acvtDataLoad_HeadTxtView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TitleTxtView" />

        </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/MainTextTxtView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/MainTextTxtView"
            style="@style/BaseTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/acvtDataLoad_MainTextTxtView"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TopPanel"
            app:layout_constraintVertical_bias="0.39999998" />

        <TextView
            android:id="@+id/SpeedTxtView"
            style="@style/BaseTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/acvtDataLoad_SpeedTxtView"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MainTextTxtView" />

        <TextView
            android:id="@+id/LoadTxtView"
            style="@style/BaseTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/acvtDataLoad_LoadTxtView"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SpeedTxtView" />

        <TextView
            android:id="@+id/TimeTxtView"
            style="@style/BaseTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/acvtDataLoad_TimeTxtView"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoadTxtView" />

    </android.support.constraint.ConstraintLayout>
</layout>