<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/MainLayot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorContentBackground"
        tools:context=".DefinitionPerformerActivity">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/TopPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTopPanelBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ExitBtnImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="imgBtn_onClick"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/button_exit" />

            <TextView
                android:id="@+id/TitleTxtView"
                style="@style/TopPanelTxtTitle"
                android:text="@string/name_buisness_process"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/HeadTxtView"
                style="@style/TopPanelTxtHead"
                android:text="@string/acvtDefPerf_HeadTxtView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TitleTxtView" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/MainTextTxtView"
            style="@style/BaseTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/acvtDefPerf_MainTextTxtView"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/SearchEditTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/FIOTxtView"
            style="@style/BaseTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/acvtDefPerf_FIOTxtView"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SearchEditTxt" />

        <TextView
            android:id="@+id/PostTxtView"
            style="@style/BaseTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/acvtDefPerf_PostTxtView"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FIOTxtView" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Перейти на 'Незавершенные данные'"
            app:layout_constraintBottom_toTopOf="@+id/BottomPanelThreeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/SearchEditTxt"
            style="@style/SearchEditTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TopPanel">

            <requestFocus></requestFocus>
        </EditText>

        <ImageButton
            android:id="@+id/SearchBtnImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6sp"
            android:onClick="searchBtnImg_onClick"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/SearchEditTxt"
            app:layout_constraintEnd_toEndOf="@+id/SearchEditTxt"
            app:layout_constraintTop_toTopOf="@+id/SearchEditTxt"
            app:srcCompat="@mipmap/text_icon_search" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/BottomPanelThreeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorContentBackground"
            app:layout_constraintBottom_toTopOf="@+id/BottomPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/KeyOpenBtnImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ThreeBtnBotPanel_onClick"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/keyboard_enabled" />

            <ImageButton
                android:id="@+id/ShowBotPanelBtnImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ThreeBtnBotPanel_onClick"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/buttons_disabled" />

            <ImageButton
                android:id="@+id/UpDownBtnImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ThreeBtnBotPanel_onClick"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ShowBotPanelBtnImg"
                app:layout_constraintStart_toEndOf="@+id/KeyOpenBtnImg"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/arrow_down" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/BottomPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBottomPanelBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/NextBtnImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="imgBtn_onClick"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/button_next" />

            <ImageButton
                android:id="@+id/BackBtnImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/button_back_disable" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>